--- a/templates/output.html
+++ b/templates/output.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="icon">
-          <a href="search.html">
+          <a href="search">
             <span class="material-symbols-outlined">search</span>
           </a>
         </div>
