--- a/static/css/index.css
+++ b/static/css/index.css
@@ -125,7 +125,6 @@ header .navbar .icon .material-symbols-outlined:hover {
 
 .box1 h2,
 .box1 p {
-
   color: #F7FAFF
 }
 
@@ -135,13 +134,14 @@ header .navbar .icon .material-symbols-outlined:hover {
 }
 
 .box1 p,
-.box2 p {
+.box2 p,
+.box3 p {
   margin-left: 20px;
   text-align: justify
 }
 
 .box1 h2,
-.box2 h2 {
+.box2 h2, .box3 h2 {
   font-family: 'Righteous', cursive;
   font-size: 40px;
 }
@@ -168,7 +168,7 @@ header .navbar .icon .material-symbols-outlined:hover {
 
 }
 
-.box2 {
+.box2{
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -202,7 +202,7 @@ header .navbar .icon .material-symbols-outlined:hover {
 } 
 
 
-.contain .part2 .box2 {
+.contain .part2 .box3 {
   display: flex;
   flex-direction: column;
   min-height: fit-content;
@@ -211,8 +211,34 @@ header .navbar .icon .material-symbols-outlined:hover {
   color: #3B82F6;
   border-radius: 0.75rem;
   padding: 16px 16px;
-  margin: 10px 20px;
+  margin: 10px 40px;
   width: fit-content;
+}
+
+.box3 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 41.6666667%;
+  min-height: fit-content;
+  background-color: #ffffff;
+  border: 1px solid #4169E1;
+  color: #3B82F6;
+  border-radius: 0.75rem;
+  padding: 16px 16px;
+  margin-bottom: 16px;
+}
+
+.box3 h2,
+.box3 p {
+  color: #4169E1;
+}
+
+.box3 h2 {
+  font-family: 'Righteous', cursive;
+  font-size: 32px;
+  padding: 20px 0 0 20px;
+  width: 100%;
 }
 
 .major{
@@ -227,7 +253,7 @@ header .navbar .icon .material-symbols-outlined:hover {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 20px;
+  padding: 10px 20px;
   background-color: #ffffff;
 }
 
