Fauzan ask for this

--- a/templates/search.html
+++ b/templates/search.html
@@ -24,7 +24,7 @@
                   <span class="material-symbols-outlined">close</span>
                 </button>
             </form>
-
+            <input id="prodiList" value="{{major}}" disabled></input>
             <div class="result-box">
                 <ul id="result-list">
                     <!-- Daftar rekomendasi jurusan -->
@@ -32,6 +32,6 @@
             </div>
     </section>
 
-    <!-- <script src="../static/js/validateInput.js"></script> -->
+    <script src="../static/js/validateInput.js"></script> 
 </body>
 </html>
