--- a/templates/search.html
+++ b/templates/search.html
@@ -32,6 +32,6 @@
             </div>
     </section>
 
-    <script src="../static/js/validateInput.js"></script> 
+    <!-- <script src="../static/js/validateInput.js"></script>  -->
 </body>
 </html>
