--- a/templates/output.html
+++ b/templates/output.html
@@ -55,7 +55,7 @@
             <div class="judul2">Information System</div>
         <div class="isi">
                 <div class="tab_o">
-                    <input type="radio" name="acc" id="acc1" checked>
+                    <input type="radio" name="acc" id="acc1">
                     <div class="kotak_o">
                         <label for="acc1">
                         <span class="skill">Skill</span>
