--- a/templates/output.html
+++ b/templates/output.html
@@ -35,8 +35,8 @@
         </div>
       </nav>
     </header>
-    <div class="row_o mt-[75px]">
-      <div class="col_o-1">
+    <div class="row_o mt-[75px] w-full flex justify-end">
+      <div class="col_o-1 fixed left-0">
         <section class="cloud"></section>
 
         <script src="https://d3js.org/d3.v5.min.js"></script>
@@ -67,7 +67,7 @@
         </form>
       </div>
 
-      <div class="col_o-2">
+      <div class="col_o-2 w-full">
         <div class="output">
           <div class="judul pt-1">Top Requirements for</div>
           <div class="judul2">{{query}}</div>
@@ -96,7 +96,6 @@
             </div>
             {% endfor %}
           </div>
-          <div class="see_more">Scroll up to see more</div>
         </div>
       </div>
     </div>
