--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,17 +1,17 @@
 <header>
-        <a href="./" class="logo">SEAREQ</a>
+  <a href="/" class="logo">SEAREQ</a>
 
-        <nav class="navbar">
-            <div class="menus">
-                <a href="major">Major</a>
-                <a href="about">About</a>
-                <a href="faq">FAQ</a>
-            </div>
+  <nav class="navbar">
+    <div class="menus">
+      <a href="/history/major">Major</a>
+      <a href="/about">About</a>
+      <a href="/faq">FAQ</a>
+    </div>
 
-            <div class="icon">
-                <a href="search">
-                    <span class="material-symbols-outlined">search</span>
-                </a>
-            </div>
-        </nav>
-    </header>
+    <div class="icon">
+      <a href="/search">
+        <span class="material-symbols-outlined">search</span>
+      </a>
+    </div>
+  </nav>
+</header>
