--- a/templates/search.html
+++ b/templates/search.html
@@ -55,6 +55,6 @@
       </form>
     </div>
     </section>
-    <!-- <script src="../static/js/validateInput.js"></script>  -->
+    <!-- <script src="/static/js/validateInput.js"></script>  -->
 </body>
 </html>
