add date generated to output page

--- a/templates/major.html
+++ b/templates/major.html
@@ -12,7 +12,7 @@
                 </div>
     
                 <div class="icon">
-                    <a href="search">
+                    <a href="/search">
                         <span class="material-symbols-outlined">search</span>
                     </a>
                 </div>
