--- a/templates/output.html
+++ b/templates/output.html
@@ -62,7 +62,7 @@
             >
               see new version
             </button>
-            <span class="last_up">*Last Updated on Dec 2</span>
+            <span class="last_up">*Last Updated {{date_generated}}</span>
           </div>
         </form>
       </div>
