Add pop-up error

--- a/templates/search.html
+++ b/templates/search.html
@@ -39,7 +39,7 @@
       </div>
     </section>
 
-    <!-- <section class="search">
+    <section class="search">
       <div class="sb-container">
         <form action="{% url 'getByQuery' %}" method="POST" class="search-box" id="search-form">
           {% csrf_token %}
@@ -56,7 +56,7 @@
             </div>
         </form>
       </div>
-    </section> -->
+    </section>
 
     <script>
       // Tombol close akan mengarahkan pengguna ke halaman yang sebelumnya diakses
