BDD test for User Story Get_Stakeholder_Requirements_From_Database_In_Search_Page with 3 scenario

--- a/templates/search.html
+++ b/templates/search.html
@@ -45,7 +45,7 @@
           {% csrf_token %}
             <div class="search-box-box">
               <button id="search-button" type="submit"><span class="material-symbols-outlined">search</span></button>
-              <input type="text" id="input-box" placeholder="GET BY QUERY (SEMENTARA GES BUAT SCRAP ALL JURUSAN DULU)" autocomplete="off" name="getByQuery">
+              <input type="text" id="input-box-sementara" placeholder="GET BY QUERY (SEMENTARA GES BUAT SCRAP ALL JURUSAN DULU)" autocomplete="off" name="getByQuery">
             </div>
 
             <div class="search-box-box">
