--- a/templates/output.html
+++ b/templates/output.html
@@ -59,6 +59,7 @@
             <button
               type="submit"
               class="py-2 px-3 rounded-xl text-white shadow-xl bg-blue-600 hover:bg-blue-700 active:bg-blue-700 focus:outline-none focus:ring focus:ring-blue-300 transition-all"
+              id="version"
             >
               see new version
             </button>
