--- a/static/css/index.css
+++ b/static/css/index.css
@@ -199,35 +199,8 @@ header .navbar .icon .material-symbols-outlined:hover {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  align-items: center;
   justify-content: center;
-  align-items: center;
-}
-
-.contain .part2 .box3 .box2 {
-  display: flex;
-  flex-direction: column;
-  min-height: fit-content;
-  background-color: #ffffff;
-  border: 1px solid #4169e1;
-  color: #3b82f6;
-  border-radius: 0.75rem;
-  padding: 16px 16px;
-  margin: 10px 40px;
-  width: fit-content;
-}
-
-.box3 {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 41.6666667%;
-  min-height: fit-content;
-  background-color: #ffffff;
-  border: 1px solid #4169e1;
-  color: #3b82f6;
-  border-radius: 0.75rem;
-  padding: 16px 16px;
-  margin-bottom: 16px;
 }
 
 .box3 h2,
@@ -238,29 +211,25 @@ header .navbar .icon .material-symbols-outlined:hover {
 .box3 h2 {
   font-family: "Righteous", cursive;
   font-size: 32px;
-  padding: 20px 0 0 20px;
-  width: 100%;
+  width: 30%;
 }
 
 .box3 {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  width: 41.6666667%;
-  min-height: fit-content;
   background-color: #ffffff;
   border: 1px solid #4169e1;
   color: #3b82f6;
   border-radius: 0.75rem;
-  padding: 16px 16px;
-  margin: 10px 20px;
+  padding: 20px;
+  margin: 10px 40px;
+  gap: 20px;
   width: fit-content;
 }
 
 .major {
   display: flex;
   flex-direction: row;
-  padding: 10px;
   background-color: #ffffff;
   flex-wrap: wrap;
   gap: 10px;
@@ -271,8 +240,8 @@ header .navbar .icon .material-symbols-outlined:hover {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
   background-color: #ffffff;
+  width: 900px;
 }
 
 .listmajor li {
