Redirect after clicking OK in SweetAlert

--- a/templates/search.html
+++ b/templates/search.html
@@ -58,6 +58,8 @@
       </div>
     </section>
 
+    <a href="/search"><button type="button" class="swal2-confirm swal2-styled" aria-label="" style="display: inline-block;">OK</button></a>
+
     <script>
       // Tombol close akan mengarahkan pengguna ke halaman yang sebelumnya diakses
       document.addEventListener('DOMContentLoaded', function() {
@@ -75,17 +77,18 @@
       });
     </script>
 
-   {% if error_message %}
-      <script>
-        document.addEventListener('DOMContentLoaded', function () {
-          Swal.fire({
-              icon: 'error',
-              title: 'Error!',
-              text: '{{ error_message }}',
-          });
-        });
-      </script>
-    {% endif %} 
+    {% if error_message %}
+    <script>
+      Swal.fire({
+          icon: 'error',
+          title: 'Error!',
+          text: '{{ error_message }}',
+          confirmButtonText: 'OK',
+      }).finally(() => {
+        window.location.href = '/search';
+      });
+    </script>
+    {% endif %}
 
     <script src="../static/js/validateinput.js"></script> 
 </body>
